# neo

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  BOOTSTRAP.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  WHATS_NEW.md  pyproject.toml
.github/: pull_request_template.md
config/: .env.example  app.example.json  gateway.example.json  hermes.example.yaml
docs/: changelog-policy.md  migration-contract.md  resource-mutations.md
protocols/: calendar.md  life-day.md  notifications.md  projects.md  someday.md
records/: INBOX.md  PLANS.md  REPO.md  SPEC.md  STATUS.md
schemas/: action-item.schema.json  app.schema.json  calendar-index.schema.json  current-index.schema.json  day.schema.json  fridge.schema.json  medical.schema.json  pending.schema.json  private-spark.schema.json  project-index.schema.json  project.schema.json  someday.schema.json
scripts/: build_calendar_index.py  check_pr_paths.py  run-kakao-map-mcp.sh
skills/: README.md
tests/: helpers.py  test_auto_wake.py  test_calendar_noop_commit.py  test_cli.py  test_cli_boundaries.py  test_cli_contracts.py  test_configurable_timezone.py  test_day_storage.py  test_git_auto_commit.py  test_group_qa.py  test_group_qa_projection_contracts.py  test_life_day_followups.py  test_medical_records.py  test_medication_events.py  test_medication_history.py  test_medication_intent.py  test_migration_steps.py  test_mutations.py  test_naps.py  test_pr_path_guard.py  test_private_spark.py  test_project_storage.py  test_repository_catalog.py  test_seoul_date_boundary.py  test_sleep_reporting.py  test_someday.py  (+3 more)
(+75 files in other folders)
