[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "neo"
version = "0.1.0"
description = "Personal life-day, project, and recurring medical record workspace"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.20,<5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[project.scripts]
neoctl = "neo.cli:console_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
